[package]
name = "itransformer"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A Rust library for the iTransformer model."
homepage = "https://github.com/rust-dd/iTransformer"
repository = "https://github.com/rust-dd/iTransformer"
documentation = "https://docs.rs/itransformer/latest/itransformer/"
readme = "README.md"
keywords = [
    "iTransformer",
    "transformer",
    "tch-rs",
    "deep_learning",
    "timeseries",
]

[dependencies]
either = "1.13.0"
tch = "0.18.1"
